src/antlr/grammar/MATLABParser.java
// Generated from grammar/MATLAB.g4 by ANTLR 4.7.1
package antlr.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MATLABParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NL=1, BREAK=2, CASE=3, CATCH=4, CONTINUE=5, ELSE=6, ELSEIF=7, END=8, FOR=9, 
		FUNCTION=10, GLOBAL=11, IF=12, OTHERWISE=13, PERSISTENT=14, RETURNS=15, 
		SWITCH=16, TRY=17, VARARGIN=18, WHILE=19, CLEAR=20, ENDS=21, DOUBLE_EQ=22, 
		LOG_OR=23, LOG_AND=24, LSTE=25, GRTE=26, NEQ=27, EL_TIMES=28, EL_LEFTDIV=29, 
		EL_RIGHTDIV=30, EL_EXP=31, EL_CCT=32, EQ=33, BIN_OR=34, BIN_AND=35, LST=36, 
		GRT=37, COLON=38, PLUS=39, MINUS=40, NEG=41, TIMES=42, LEFTDIV=43, RIGHTDIV=44, 
		EXP=45, CCT=46, SEMI=47, LPAREN=48, RPAREN=49, LBRACE=50, RBRACE=51, LSBRACE=52, 
		RSBRACE=53, AT=54, DOT=55, COMMA=56, BLOCKCOMMENT=57, COMMENT=58, THREEDOTS=59, 
		ID=60, INT=61, FLOAT=62, STRING=63, WS=64;
	public static final int
		RULE_file = 0, RULE_functionMFile = 1, RULE_f_def_line = 2, RULE_f_input = 3, 
		RULE_f_argument_list = 4, RULE_f_body = 5, RULE_scriptMFile = 6, RULE_statement = 7, 
		RULE_assignment = 8, RULE_reference = 9, RULE_argument_list = 10, RULE_command_form = 11, 
		RULE_command_args = 12, RULE_for_command = 13, RULE_if_command = 14, RULE_global_command = 15, 
		RULE_while_command = 16, RULE_return_command = 17, RULE_expr = 18;
	public static final String[] ruleNames = {
		"file", "functionMFile", "f_def_line", "f_input", "f_argument_list", "f_body", 
		"scriptMFile", "statement", "assignment", "reference", "argument_list", 
		"command_form", "command_args", "for_command", "if_command", "global_command", 
		"while_command", "return_command", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\n'", "'break'", "'case'", "'catch'", "'continue'", "'else'", 
		"'elseif'", "'end'", "'for'", "'function'", "'global'", "'if'", "'otherwise'", 
		"'persistent'", "'return'", "'switch'", "'try'", "'varargin'", "'while'", 
		"'clear'", null, "'=='", "'||'", "'&&'", "'<='", "'>='", "'~='", "'.*'", 
		"'./'", "'.\\'", "'.^'", "'.''", "'='", "'|'", "'&'", "'<'", "'>'", "':'", 
		"'+'", "'-'", "'~'", "'*'", "'/'", "'\\'", "'^'", "'''", "';'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "'@'", "'.'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NL", "BREAK", "CASE", "CATCH", "CONTINUE", "ELSE", "ELSEIF", "END", 
		"FOR", "FUNCTION", "GLOBAL", "IF", "OTHERWISE", "PERSISTENT", "RETURNS", 
		"SWITCH", "TRY", "VARARGIN", "WHILE", "CLEAR", "ENDS", "DOUBLE_EQ", "LOG_OR", 
		"LOG_AND", "LSTE", "GRTE", "NEQ", "EL_TIMES", "EL_LEFTDIV", "EL_RIGHTDIV", 
		"EL_EXP", "EL_CCT", "EQ", "BIN_OR", "BIN_AND", "LST", "GRT", "COLON", 
		"PLUS", "MINUS", "NEG", "TIMES", "LEFTDIV", "RIGHTDIV", "EXP", "CCT", 
		"SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LSBRACE", "RSBRACE", 
		"AT", "DOT", "COMMA", "BLOCKCOMMENT", "COMMENT", "THREEDOTS", "ID", "INT", 
		"FLOAT", "STRING", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MATLAB.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MATLABParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public ScriptMFileContext scriptMFile() {
			return getRuleContext(ScriptMFileContext.class,0);
		}
		public FunctionMFileContext functionMFile() {
			return getRuleContext(FunctionMFileContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case NL:
			case FOR:
			case GLOBAL:
			case IF:
			case RETURNS:
			case WHILE:
			case PLUS:
			case MINUS:
			case NEG:
			case LPAREN:
			case ID:
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				scriptMFile();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				functionMFile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionMFileContext extends ParserRuleContext {
		public F_def_lineContext f_def_line() {
			return getRuleContext(F_def_lineContext.class,0);
		}
		public F_bodyContext f_body() {
			return getRuleContext(F_bodyContext.class,0);
		}
		public FunctionMFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionMFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterFunctionMFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitFunctionMFile(this);
		}
	}

	public final FunctionMFileContext functionMFile() throws RecognitionException {
		FunctionMFileContext _localctx = new FunctionMFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionMFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			f_def_line();
			setState(43);
			f_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_def_lineContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(MATLABParser.FUNCTION, 0); }
		public List<TerminalNode> ID() { return getTokens(MATLABParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MATLABParser.ID, i);
		}
		public F_inputContext f_input() {
			return getRuleContext(F_inputContext.class,0);
		}
		public F_def_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_def_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_def_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_def_line(this);
		}
	}

	public final F_def_lineContext f_def_line() throws RecognitionException {
		F_def_lineContext _localctx = new F_def_lineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_f_def_line);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				match(FUNCTION);
				setState(46);
				match(ID);
				setState(47);
				match(EQ);
				setState(48);
				match(ID);
				setState(49);
				f_input();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				match(FUNCTION);
				setState(51);
				match(ID);
				setState(52);
				f_input();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_inputContext extends ParserRuleContext {
		public F_argument_listContext f_argument_list() {
			return getRuleContext(F_argument_listContext.class,0);
		}
		public F_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_input(this);
		}
	}

	public final F_inputContext f_input() throws RecognitionException {
		F_inputContext _localctx = new F_inputContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_f_input);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(LPAREN);
				setState(57);
				match(RPAREN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				match(LPAREN);
				setState(59);
				f_argument_list();
				setState(60);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_argument_listContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public F_argument_listContext f_argument_list() {
			return getRuleContext(F_argument_listContext.class,0);
		}
		public F_argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_argument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_argument_list(this);
		}
	}

	public final F_argument_listContext f_argument_list() throws RecognitionException {
		F_argument_listContext _localctx = new F_argument_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_f_argument_list);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(ID);
				setState(65);
				match(COMMA);
				setState(66);
				f_argument_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_bodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(MATLABParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MATLABParser.NL, i);
		}
		public F_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterF_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitF_body(this);
		}
	}

	public final F_bodyContext f_body() throws RecognitionException {
		F_bodyContext _localctx = new F_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_f_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << FOR) | (1L << GLOBAL) | (1L << IF) | (1L << RETURNS) | (1L << WHILE) | (1L << PLUS) | (1L << MINUS) | (1L << NEG) | (1L << LPAREN) | (1L << ID) | (1L << INT) | (1L << FLOAT))) != 0)) {
				{
				setState(74);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FOR:
				case GLOBAL:
				case IF:
				case RETURNS:
				case WHILE:
				case PLUS:
				case MINUS:
				case NEG:
				case LPAREN:
				case ID:
				case INT:
				case FLOAT:
					{
					setState(70);
					statement();
					setState(71);
					_la = _input.LA(1);
					if ( !(_la==NL || _la==SEMI) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				case NL:
					{
					setState(73);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptMFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MATLABParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(MATLABParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(MATLABParser.NL, i);
		}
		public ScriptMFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptMFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterScriptMFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitScriptMFile(this);
		}
	}

	public final ScriptMFileContext scriptMFile() throws RecognitionException {
		ScriptMFileContext _localctx = new ScriptMFileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_scriptMFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << FOR) | (1L << GLOBAL) | (1L << IF) | (1L << RETURNS) | (1L << WHILE) | (1L << PLUS) | (1L << MINUS) | (1L << NEG) | (1L << LPAREN) | (1L << ID) | (1L << INT) | (1L << FLOAT))) != 0)) {
				{
				setState(83);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FOR:
				case GLOBAL:
				case IF:
				case RETURNS:
				case WHILE:
				case PLUS:
				case MINUS:
				case NEG:
				case LPAREN:
				case ID:
				case INT:
				case FLOAT:
					{
					setState(79);
					statement();
					setState(80);
					_la = _input.LA(1);
					if ( !(_la==NL || _la==SEMI) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					break;
				case NL:
					{
					setState(82);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Command_formContext command_form() {
			return getRuleContext(Command_formContext.class,0);
		}
		public For_commandContext for_command() {
			return getRuleContext(For_commandContext.class,0);
		}
		public If_commandContext if_command() {
			return getRuleContext(If_commandContext.class,0);
		}
		public Global_commandContext global_command() {
			return getRuleContext(Global_commandContext.class,0);
		}
		public While_commandContext while_command() {
			return getRuleContext(While_commandContext.class,0);
		}
		public Return_commandContext return_command() {
			return getRuleContext(Return_commandContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				expr(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				command_form();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(94);
				for_command();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(95);
				if_command();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(96);
				global_command();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(97);
				while_command();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(98);
				return_command();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			reference();
			setState(102);
			match(EQ);
			setState(103);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferenceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MATLABParser.ID, 0); }
		public Argument_listContext argument_list() {
			return getRuleContext(Argument_listContext.class,0);
		}
		public ReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitReference(this);
		}
	}

	public final ReferenceContext reference() throws RecognitionException {
		ReferenceContext _localctx = new ReferenceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_reference);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(ID);
				setState(107);
				match(LPAREN);
				setState(108);
				argument_list();
				setState(109);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Argument_listContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Argument_listContext argument_list() {
			return getRuleContext(Argument_listContext.class,0);
		}
		public Argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).enterArgument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MATLABListener ) ((MATLABListener)listener).exitArgument_list(this);
		}
	}

	public final Argument_listContext argument_list() throws RecognitionException {
		Argument_listContext _localctx = new Argument_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_argument_list);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(COLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				expr(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				match(COLON);
				setState(116);
				match(COMMA);
				setState(117);
				argument_list();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				expr(0);
				setState(119);
				match(COMMA);
				setState(120);
				argument_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
